# thoughts

./: Cargo.toml  README.md
src/: cli.rs  database.rs  export.rs  lib.rs  log.rs  main.rs  port.rs  session.rs  thought.rs  version.rs  victor.rs  wipe.rs
thoughts/: Cargo.toml
thoughts/src/: cli.rs  config.rs  export.rs  lib.rs  main.rs  prompt.rs  victor.rs  wipe.rs
