[package]
name = "thoughts"
version = "2.0.1"
edition = "2021"
description = "A simple cli for recording down any random thoughts you may have :D"
license = "GPL-3.0-only"
authors = [ "kalscium <kalscium@protonmail.com>" ]
repository = "https://github.com/kalscium/thoughts"
keywords = [ "cli", "thoughts", "simple" ]
categories = [ "command-line-utilities" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
lazy-db = "1.0.2"
stack-db = "0.3.2"
rustyline = "13.0.0"
home = "0.5.9"
