[package]
name = "thoughts"
version = "3.0.0"
edition = "2021"
description = "A simple cli for recording down any random thoughts you may have :D"
license = "GPL-3.0-only"
authors = [ "kalscium <kalscium@protonmail.com>" ]
repository = "https://github.com/kalscium/thoughts"
keywords = [ "cli", "thoughts", "simple" ]
categories = [ "command-line-utilities" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
stack-db = "0.3"
rustyline = "13.0"
home = "0.5"
log = "0.4"
color-eyre = "0.6"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
chrono = { version = "0.4", features = ["serde"] }
