[package]
name = "thoughts"
version = "2.0.0"
edition = "2021"
description = "A really simple CLI frontend to a database of my random thoughts."
license = "GPLv3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
lazy-db = "1.0.2"
stack-db = "0.3.2"
rustyline = "13.0.0"
home = "0.5.9"
